# falkordb-cli

./: .goreleaser.yml  Cargo.toml  README.md  README_RELEASE.md  demo.sh
.github/workflows/: ci.yml  goreleaser.yml  release.yml
src/: cli.rs  client.rs  commands.rs  completion.rs  interactive.rs  main.rs  tests.rs
