[package]
name = "falkordb-cli"
version = "0.1.0"
edition = "2021"
description = "A command-line interface for FalkorDB"
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
falkordb = "0.1.11"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
rustyline = "14.0"
url = "2.5"
